--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@unocss/nuxt": "catalog:",
     "@vite-pwa/nuxt": "^0.10.6",
     "nuxt-viewport": "^2.2.0",
-    "typescript": "~5.6.2"
+    "typescript": "~5.6.2",
+    "unocss": "^0.65.3"
   }
 }
