--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "packageManager": "pnpm@9.0.4+sha512.c374b52de3de88c58fd8333df664a737279cdb0e1344ba4054d3b1fffa9a1a3670854f755dca4f16adea3f14be9896a7fcaf167409fe0c1ad60475271dafe81a",
   "devDependencies": {
+    "@antfu/eslint-config": "^3.12.1",
     "@iconify/json": "^2.2.290",
     "@nuxt/eslint": "^0.7.4",
     "@nuxt/icon": "^1.10.3",
@@ -29,6 +30,7 @@
     "@vite-pwa/nuxt": "^0.10.6",
     "nuxt-viewport": "^2.2.0",
     "typescript": "~5.6.2",
-    "unocss": "^0.65.3"
+    "unocss": "catalog:",
+    "unplugin-icons": "catalog:"
   }
 }
