--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "shared": "pnpm --filter @enjoyment-luxury-hotel/shared"
   },
   "dependencies": {
     "nuxt": "^3.15.0",
     "vue": "catalog:",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "swiper": "^11.2.0"
   },
   "packageManager": "pnpm@9.0.4+sha512.c374b52de3de88c58fd8333df664a737279cdb0e1344ba4054d3b1fffa9a1a3670854f755dca4f16adea3f14be9896a7fcaf167409fe0c1ad60475271dafe81a",
   "devDependencies": {
