--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "packages/uno-preset-dark-mode-theme"]
 	path = packages/uno-preset-dark-mode-theme
 	url = https://github.com/gn00678465/uno-preset-dark-mode-theme.git
+[submodule "packages/uno-preset-grid"]
+	path = packages/uno-preset-grid
+	url = https://github.com/gn00678465/uno-preset-grid.git
