--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nuxt-viewport": "^2.2.0",
     "typescript": "~5.6.2",
     "unocss": "catalog:",
-    "unplugin-icons": "catalog:"
+    "unplugin-icons": "catalog:",
+    "uno-preset-grid": "workspace:*"
   }
 }
