--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -14,7 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@headlessui/vue": "catalog:"
+    "@headlessui/vue": "catalog:",
+    "clsx": "^2.1.1"
   },
   "peerDependencies": {
     "unocss": "catalog:",
