feat: 新增 預約成功頁 頁面

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -15,7 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@headlessui/vue": "catalog:",
-    "clsx": "^2.1.1"
+    "clsx": "catalog:"
   },
   "peerDependencies": {
     "unocss": "catalog:",
