--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "swiper": "^11.2.0",
     "v-calendar": "^3.1.2",
     "vue": "catalog:",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "clsx": "catalog:"
   },
   "packageManager": "pnpm@9.0.4+sha512.c374b52de3de88c58fd8333df664a737279cdb0e1344ba4054d3b1fffa9a1a3670854f755dca4f16adea3f14be9896a7fcaf167409fe0c1ad60475271dafe81a",
   "devDependencies": {
